Wed Aug 21 17:34:27 2013  Tanaka Akira  <akr@fsij.org>

	* gc.c (getrusage_time): Fallback clock_gettime to getrusage when
	  clock_gettime fails.
	  Reported by Eric Saxby.  [ruby-core:56762] [Bug #8805]
	  
Wed Aug 21 02:32:32 2013  Koichi Sasada  <ko1@atdot.net>

	* insns.def: fix regexp's once option behavior.
	  fix [ruby-trunk - Bug #6701]

	* insns.def: remove `onceinlinecache' and introduce `once' instruction.
	  `once' doesn't use `setinlinecache' insn any more.

	* vm_core.h: `union iseq_inline_storage_entry' to store once data.

	* compile.c: catch up above changes.

	* iseq.c: ditto.

	* vm.c, vm_insnhelper.c: ditto. fix `m_core_set_postexe()' which
	  is depend on `onceinlinecache' insn.

	* test/ruby/test_regexp.rb: add tests.

	* iseq.c: ISEQ_MINOR_VERSION to 1 (should increment major?)

Wed Aug 21 02:30:15 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gcdebug_print_obj_condition): add printing information.

Tue Aug 20 13:38:00 2013  Naohisa Goto  <ngotogenome@gmail.com>

	* test/gdbm/test_gdbm.rb: skip TestGDBM#test_s_open_lock on Solaris.
	  On Solaris (and platforms which do not have flock and have lockf),
	  with GDBM 1.10, gdbm_open(3) blocks when opening already locked
	  gdbm file. [Bug #8790] [ruby-dev:47631]

Tue Aug 20 02:32:52 2013  Zachary Scott  <e@zzak.io>

	* lib/test/: [DOC] Document Test::Unit, hide most submodules and
	  classes from rdoc. Since lib/test is only present as a compatibility
	  layer with the legacy test suite many test/unit users will be using
	  minitest or the test/unit gem instead. It is recommended to use one
	  of these alternatives for writing new tests.

	  This patch was based on a patch submitted by Steve Klabnik.
	  [ruby-core:56694] [Bug #8778]

Tue Aug 20 02:10:19 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/rss.rb: [DOC] Document for constants by Steve Klabnik
	  [ruby-core:56705] [Bug #8798]

Tue Aug 20 02:01:10 2013  Zachary Scott  <e@zzak.io>
